[package]
name = "segment-tree"
version = "2.0.0-git"
authors = ["Alice Ryhl <alice@ryhl.io>"]
description = "Quickly perform interval queries or modifications in some array."
repository = "https://github.com/Darksonn/segment-tree"
readme = "README.md"
keywords = ["segment", "tree", "rmq", "query", "interval"]
categories = ["data-structures", "algorithms"]
license = "MIT"

[features]
num-ops = ["num"]

[dependencies]
num = { version = "0.1", optional = true }

[dev-dependencies]
rand = "0.3"
