[package]
name = "segment-tree"
version = "2.0.0-git"
authors = ["Alice Ryhl <alice@ryhl.io>"]
description = "Quickly perform interval queries or modifications in some array.  Works on stable."
repository = "https://github.com/Darksonn/segment-tree"
readme = "README.md"
keywords = ["segment", "tree", "rmq", "query", "interval"]
categories = ["data-structures", "algorithms"]
license = "MIT"
edition = "2018"

[dependencies]
num-bigint = { version = "~0.2.0", optional = true }

[dev-dependencies]
rand = "0.6"

[package.metadata.docs.rs]
features = ["num-bigint"]
